k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-service
  namespace: ip-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ip-service
  template:
    metadata:
      labels:
        app: ip-service
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 10001
      containers:
      - name: ip-service
        image: sanjith98/ip-service:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 32Mi
