k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-service
  namespace: ip-service
spec:
  selector:
    app: ip-service
  ports:
  - port: 80
    targetPort: 8080
